fix: Toggle pyright unnecessary ignore comment config
basedpyright and pyright disagree about type ignore in
runtime test file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,7 +127,7 @@ reportDeprecated = false
 # Newer and older pyright versions may need different
 # type-ignore locations, and we want to support a wider
 # range of pyright versions.
-reportUnnecessaryTypeIgnoreComment = true
+reportUnnecessaryTypeIgnoreComment = false
 # Follows typeshed practice, separate mypy and pyright
 # type-ignores
 # See https://github.com/python/mypy/issues/12358
