--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ dependencies = [
     'typing_extensions ~= 4.15',
     'cssselect ~= 1.2',  # inline annotation
     'beautifulsoup4 ~= 4.13',  # inline annotation
-    # 1.1.11.20250516 breaks pyright
-    'types-html5lib ~= 1.1.11.20250809',
+    'types-html5lib ~= 1.1.11.20250809',  # 20250516 breaks pyright
 ]
 keywords = ['lxml', 'typing', 'stubs', 'annotation']
 authors = [
@@ -49,20 +48,22 @@ basedpyright = ['basedpyright >= 1.31.5']
 # mostly pinned for tox testing except dev group
 [dependency-groups]
 basic = [
-    'types-html5lib == 1.1.11.20250809',
+    'types-html5lib == 1.1.11.20251115',
     'typing_extensions == 4.15.0',
     "cssselect == 1.3.0",
-    "beautifulsoup4 == 4.13.5",
+    "beautifulsoup4 == 4.14.2",
 ]
 mypy    = [
     "mypy == 1.18.2",
 ]
 pyright = [
-    "pyright == 1.1.406",
-    "basedpyright == 1.31.7",
+    "pyright == 1.1.407",
+    "basedpyright == 1.33.0",
 ]
 format  = ["ruff ~= 0.6"]
 stub-test = [
+    # pytest 9.x disallow pytest_plugins in non-top conftest.py
+    "pytest >= 7.0, < 9",
     "pytest-mypy-plugins == 3.2.0",
     {include-group = "mypy"},
 ]
@@ -70,7 +71,8 @@ rt-test = [
     "html5lib == 1.1",
     "pook == 2.1.4",
     "urllib3 == 2.5.0",
-    "hypothesis[zoneinfo] == 6.138.3",
+    "hypothesis[zoneinfo] == 6.148.1",
+    "pytest >= 7.0, < 9",
     "pytest-revealtype-injector == 0.6.1",
     "rnc2rng == 2.7.0",
     {include-group = "mypy"},
@@ -85,13 +87,13 @@ lxml60 = ["lxml == 6.0.2"]
 dev = [
     'tox ~= 4.22',
     'mypy >= 1.18.1',
-    'pyright >=1.1.405',
+    'pyright >= 1.1.405',
     'basedpyright >= 1.31.5',
     'html5lib == 1.1',
     'pook >= 2.0',
     'urllib3 >= 2.0',
     'pytest-mypy-plugins >= 3.2.0',
-    'pytest-revealtype-injector >= 0.5.0',
+    'pytest-revealtype-injector >= 0.6.1',
     'lxml >= 5.0',
     'rnc2rng',
     # HypothesisWorks/hypothesis#4269
