test: Drop unused mypy type-ignores in tests

--- a/tests/runtime/mypy.ini
+++ b/tests/runtime/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 strict = True
 pretty = False
-warn_unused_ignores = False
+warn_unused_ignores = True
 
 # Pook has no annotation
 ignore_missing_imports = True
