test: No more globally ignore mypy assignment error code

--- a/tests/runtime/mypy.ini
+++ b/tests/runtime/mypy.ini
@@ -9,23 +9,12 @@ ignore_missing_imports = True
 # Some error codes are so frequently emitted by mypy
 # that it is more convenient to disable globally.
 #
-# -- assignment
-# Lxml can normalize unicode and byte strings upon
-# certain attribute assignments, and outputs a single
-# type. Mypy slams door upon such assignments, where
-# input and output type for attribute are unidentical.
-# See python/mypy#3004 for further discussion.
-# Earlier days mypy emits error directly when checking
-# annotation files, now they pretend no error exists in
-# annotation, yet becomes fatal whenever one uses such
-# pattern in real python code.
-#
 # -- func-returns-value
 # Mypy bans assigning result to func that doesn't return
 # value; it even go as far as banning None assertion
 # statements frequently used in tests.
 
-disable_error_code = func-returns-value, assignment
+disable_error_code = func-returns-value
 
 # In some other cases, tests have to be altered in
 # alternative form for mypy to be functional.
