--- a/tests/runtime/mypy.ini
+++ b/tests/runtime/mypy.ini
@@ -2,6 +2,8 @@
 strict = True
 pretty = False
 warn_unused_ignores = True
+allow_redefinition_new = True
+local_partial_types = True
 
 # Pook has no annotation
 ignore_missing_imports = True
