--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,6 +150,11 @@ strict = true
 show_error_context = true
 pretty = true
 warn_unused_ignores = true
+show_traceback = true
+plugins = [
+    "mypy_plugin_lxml.main",
+    "mypy.plugins.proper_plugin",
+]
 
 [tool.ruff]
 target-version = "py312"
