--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,28 +41,36 @@ classifiers = [
 homepage = 'https://github.com/abelcheung/types-lxml'
 
 [project.optional-dependencies]
-mypy = ['mypy >= 1.18.1']
-pyright = ['pyright >= 1.1.406']
-basedpyright = ['basedpyright >= 1.31.6']
+dev = [
+    'tox ~= 4.24',
+    'html5lib == 1.1',
+    'pook >= 2.0',
+    'urllib3 >= 2.0',
+    "pytest >= 7.0, < 9",
+    'pytest-mypy-plugins >= 3.2.0',
+    'pytest-revealtype-injector >= 0.6.2',
+    'lxml >= 5.0',
+    'rnc2rng',
+    'hypothesis >= 6.127.7',  # HypothesisWorks/hypothesis#4269
+    'tzdata',
+    'ruff ~= 0.6',
+    'mypy >= 1.18.1',
+    'pyright >= 1.1.406',
+    'basedpyright >= 1.31.6; platform_machine != "i686"',
+]
 
 # mostly pinned for tox testing except dev group
 [dependency-groups]
 basic = [
-    'types-html5lib == 1.1.11.20251115',
+    'types-html5lib == 1.1.11.20251117',
     'typing_extensions == 4.15.0',
     "cssselect == 1.3.0",
-    "beautifulsoup4 == 4.14.2",
+    "beautifulsoup4 == 4.14.3",
 ]
-mypy    = [
-    "mypy == 1.18.2",
-]
-pyright = [
-    "pyright == 1.1.407",
-]
-basedpyright = [
-    "basedpyright == 1.34.0",
-]
-format  = ["ruff ~= 0.6"]
+mypy = ["mypy == 1.19.0"]
+pyright = ["pyright == 1.1.407"]
+basedpyright = ["basedpyright == 1.35.0; platform_machine != 'i686'"]
+format = ["ruff ~= 0.6"]
 stub-test = [
     # pytest 9.x disallow pytest_plugins in non-top conftest.py
     "pytest >= 7.0, < 9",
@@ -73,7 +81,8 @@ rt-test = [
     "html5lib == 1.1",
     "pook == 2.1.4",
     "urllib3 == 2.5.0",
-    "hypothesis[zoneinfo] == 6.148.1",
+    "hypothesis == 6.148.6",
+    "tzdata",
     "pytest >= 7.0, < 9",
     "pytest-revealtype-injector == 0.6.2",
     "rnc2rng == 2.7.0",
@@ -87,23 +96,6 @@ lxml52 = ["lxml == 5.2.2"]
 lxml53 = ["lxml == 5.3.2"]
 lxml54 = ["lxml == 5.4.0"]
 lxml60 = ["lxml == 6.0.2"]
-dev = [
-    'tox ~= 4.22',
-    'html5lib == 1.1',
-    'pook >= 2.0',
-    'urllib3 >= 2.0',
-    'pytest-mypy-plugins >= 3.2.0',
-    'pytest-revealtype-injector >= 0.6.2',
-    'lxml >= 5.0',
-    'rnc2rng',
-    # HypothesisWorks/hypothesis#4269
-    'hypothesis[zoneinfo] >= 6.127.7',
-    {include-group = "format"},
-    {include-group = "basic"},
-    {include-group = "mypy"},
-    {include-group = "pyright"},
-    {include-group = "basedpyright"},
-]
 
 [tool.pdm.version]
 source = 'scm'
@@ -226,6 +218,7 @@ env_list = [
 
 [tool.tox.labels]
 typecheck = [
+    'basedpyright',
     'pyright',
     'mypy',
 ]
