--- a/tests/runtime/mypy.ini
+++ b/tests/runtime/mypy.ini
@@ -5,7 +5,7 @@ warn_unused_ignores = True
 allow_redefinition_new = True
 local_partial_types = True
 plugins =
-    mypy_plugin_lxml.main,
+    mypy_plugin_lxml.main
 
 # Pook has no annotation
 ignore_missing_imports = True
