--- a/tests/static/mypy-pytest.ini
+++ b/tests/static/mypy-pytest.ini
@@ -3,4 +3,4 @@ strict = false
 python_version = 3.12
 allow_subclassing_any = true
 plugins =
-    mypy_plugin_lxml.main,
+    mypy_plugin_lxml.main
