ci: Fix execution of compat workflow
Basic checks depends on mypy now because of mypy plugin

--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install prerequisites
         run: |
           uv venv -p 3.12 --python-preference only-managed
-          uv pip install -r pyproject.toml
+          uv pip install .[mypy]
 
       - uses: jakebailey/pyright-action@v2
         with:
@@ -87,7 +87,7 @@ jobs:
       - name: Install prerequisite python packages
         run: |
           uv venv -p 3.12 --python-preference only-managed
-          uv pip install -r pyproject.toml
+          uv pip install .[mypy]
           uv pip install "basedpyright==${{ matrix.bpr-ver }}"
 
       - name: Run basedpyright
