--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -9,6 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         myver:
+          - '1.19.1'
           - '1.19.0'
           - '1.18.2'
           - '1.18.1'
@@ -66,6 +67,9 @@ jobs:
       fail-fast: false
       matrix:
         bpr-ver:
+          - '1.36.2'
+          - '1.36.1'
+          - '1.36.0'
           - '1.35.0'
           - '1.34.0'
           - '1.33.0'
@@ -94,3 +98,72 @@ jobs:
         run: |
           source .venv/bin/activate
           basedpyright --level error src
+
+
+  pyrefly_compat:
+    strategy:
+      fail-fast: false
+      matrix:
+        pyr-ver:
+          - '0.46.2'
+          - '0.46.1'
+          - '0.46.0'
+          - '0.45.2'
+          - '0.45.1'
+          - '0.45.0'
+          - '0.44.2'
+          - '0.44.1'
+          - '0.44.0'
+          - '0.43.1'
+          - '0.43.0'
+          - '0.42.3'
+          - '0.42.2'
+          - '0.42.1'
+          - '0.42.0'
+          - '0.41.3'
+          - '0.41.2'
+          - '0.41.1'
+          - '0.41.0'
+          - '0.40.1'
+          - '0.40.0'
+          - '0.39.4'
+          - '0.39.3'
+          - '0.39.2'
+          - '0.39.1'
+          - '0.39.0'
+          - '0.38.2'
+          - '0.38.1'
+          - '0.38.0'
+          - '0.37.0'
+          - '0.36.2'
+          - '0.36.1'
+          - '0.36.0'
+          - '0.35.0'
+          - '0.34.0'
+          - '0.33.1'
+          - '0.33.0'
+          - '0.32.0'
+          - '0.31.1'
+          - '0.31.0'
+          - '0.30.0'
+
+    runs-on: 'ubuntu-24.04'
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: astral-sh/setup-uv@v7
+        with:
+          version: '0.9.5'
+          cache-dependency-glob: |
+            ./pyproject.toml
+
+      - name: Install prerequisite python packages
+        run: |
+          uv venv -p 3.12 --python-preference only-managed
+          uv pip install .[mypy]
+          uv pip install "pyrefly==${{ matrix.pyr-ver }}"
+
+      - name: Run pyrefly
+        run: |
+          source .venv/bin/activate
+          pyrefly check src
