fix: Python-version can be set for pyrefly now
faacebook/pyrefly#1952 is fixed

--- a/tests/runtime/pyrefly.toml
+++ b/tests/runtime/pyrefly.toml
@@ -5,7 +5,7 @@ search-path = [
     ".",
     "../../src",
 ]
-python-version = "3.11"  # facebook/pyrefly#1952
+python-version = "3.10"
 
 [errors]
 deprecated = false
