--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dev = [
     'urllib3 >= 2.0',
     "pytest >= 7.0, < 9",
     'pytest-mypy-plugins >= 3.2.0',
-    'pytest-revealtype-injector >= 0.7.0',
+    'pytest-revealtype-injector >= 0.7.1',
     'lxml >= 5.0',
     'rnc2rng',
     'hypothesis >= 6.127.7',  # HypothesisWorks/hypothesis#4269
@@ -59,7 +59,7 @@ dev = [
     'pyright >= 1.1.406',
     'basedpyright >= 1.31.6; platform_machine != "i686"',
     'ty >= 0.0.7',
-    'pyrefly >= 0.45.2',
+    'pyrefly >= 0.46.3',
 ]
 
 # mostly pinned for tox testing except dev group
@@ -74,7 +74,7 @@ mypy = ["mypy == 1.19.1"]
 pyright = ["pyright == 1.1.407"]
 basedpyright = ["basedpyright == 1.36.2; platform_machine != 'i686'"]
 ty = ["ty == 0.0.8"]
-pyrefly = ["pyrefly == 0.46.2"]
+pyrefly = ["pyrefly == 0.46.3"]
 format = ["ruff ~= 0.6"]
 stub-test = [
     # pytest 9.x disallow pytest_plugins in non-top conftest.py
@@ -89,7 +89,7 @@ rt-test = [
     "hypothesis == 6.148.8",
     "tzdata",
     "pytest >= 7.0, < 9",
-    "pytest-revealtype-injector == 0.7.0",
+    "pytest-revealtype-injector == 0.7.1",
     "rnc2rng == 2.7.0",
     {include-group = "mypy"},
     {include-group = "pyright"},
@@ -166,7 +166,7 @@ deprecated = "ignore"
 [tool.pyrefly]
 project-includes = ["src"]
 search-path = ["tests/runtime"]
-python-version = "3.11"  # facebook/pyrefly#1952
+python-version = "3.9"
 enabled-ignores = ["pyrefly"]
 
 [tool.ruff]
@@ -377,6 +377,7 @@ commands = [
     [
         'pytest',
         '--revealtype-disable-adapter=ty',
+        '--revealtype-pyrefly-config=tests/runtime/pyrefly.toml',
         '--revealtype-mypy-config=tests/runtime/mypy.ini',
         {replace = 'posargs', default = ['tests/runtime'], extend = true}
     ]
