ci: Trim unnecessary security scans and checks
- Bandit: only scan when updating .py files
- Push and PR: don't trigger test when updating bandit config

--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -14,23 +14,13 @@ name: Bandit
 on:
   push:
     branches: [ "main" ]
-    paths-ignore:
-      - '**/dependabot.yml'
-      - '.editorconfig'
-      - '**.gitignore'
-      - '**.gitattributes'
-      - '**.md'
-      - 'LICENSE*'
+    paths:
+      - '**/*.py'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-    paths-ignore:
-      - '**/dependabot.yml'
-      - '.editorconfig'
-      - '**.gitignore'
-      - '**.gitattributes'
-      - '**.md'
-      - 'LICENSE*'
+    paths:
+      - '**/*.py'
   schedule:
     - cron: '45 3 * * 3'
 
