--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,10 @@ on:
       - 'dependabot/**'
     paths-ignore:
       - '**/dependabot.yml'
+      - '**/bandit.yml'
       - '.editorconfig'
-      - '**/.gitignore'
-      - '**/.gitattributes'
+      - '.gitignore'
+      - '.gitattributes'
       - '**.md'
       - 'LICENSE'
 
