--- a/.github/workflows/build_inc.yml
+++ b/.github/workflows/build_inc.yml
@@ -20,7 +20,7 @@ jobs:
         flavor:
           - "normal"
           - "alt"
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     steps:
     - uses: actions/checkout@v6
       with:
@@ -66,7 +66,7 @@ jobs:
         flavor:
           - "normal"
           - "alt"
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     steps:
     - uses: actions/download-artifact@v7
       with:
