--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -16,7 +16,7 @@ jobs:
           - '1.19.0'
           - '1.18.2'
           - '1.18.1'
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v6
 
@@ -45,7 +45,7 @@ jobs:
           - '1.1.408'
           - '1.1.407'
           - '1.1.406'
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v6
 
@@ -85,7 +85,7 @@ jobs:
           - '1.31.7'
           - '1.31.6'
 
-    runs-on: 'ubuntu-24.04'
+    runs-on: 'ubuntu-slim'
     steps:
       - uses: actions/checkout@v6
 
@@ -119,7 +119,7 @@ jobs:
           - '0.46.0'
           - '0.45.2'
 
-    runs-on: 'ubuntu-24.04'
+    runs-on: 'ubuntu-slim'
     steps:
       - uses: actions/checkout@v6
 
@@ -152,7 +152,7 @@ jobs:
           - '0.0.8'
           - '0.0.7'
 
-    runs-on: 'ubuntu-24.04'
+    runs-on: 'ubuntu-slim'
     steps:
       - uses: actions/checkout@v6
 
