--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install prerequisites
         run: |
-          uv venv -p 3.12 --python-preference only-managed
+          uv venv --python-preference only-system
           uv pip install -r pyproject.toml
           uv pip install 'mypy == ${{ matrix.myver }}'
 
@@ -57,7 +57,7 @@ jobs:
 
       - name: Install prerequisites
         run: |
-          uv venv -p 3.12 --python-preference only-managed
+          uv venv --python-preference only-system
           uv pip install .[mypy]
 
       - uses: jakebailey/pyright-action@v2
@@ -97,7 +97,7 @@ jobs:
 
       - name: Install prerequisite python packages
         run: |
-          uv venv -p 3.12 --python-preference only-managed
+          uv venv --python-preference only-system
           uv pip install .[mypy]
           uv pip install "basedpyright==${{ matrix.bpr-ver }}"
 
@@ -112,6 +112,10 @@ jobs:
       fail-fast: false
       matrix:
         pyr-ver:
+          - '0.49.0'
+          - '0.48.2'
+          - '0.48.1'
+          - '0.48.0'
           - '0.47.0'
           - '0.46.3'
           - '0.46.2'
@@ -131,7 +135,7 @@ jobs:
 
       - name: Install prerequisite python packages
         run: |
-          uv venv -p 3.12 --python-preference only-managed
+          uv venv --python-preference only-system
           uv pip install .[mypy]
           uv pip install "pyrefly==${{ matrix.pyr-ver }}"
 
@@ -146,6 +150,8 @@ jobs:
       fail-fast: false
       matrix:
         ty-ver:
+          - '0.0.13'
+          - '0.0.12'
           - '0.0.11'
           - '0.0.10'
           - '0.0.9'
@@ -164,7 +170,7 @@ jobs:
 
       - name: Install prerequisite python packages
         run: |
-          uv venv -p 3.12 --python-preference only-managed
+          uv venv --python-preference only-system
           uv pip install .[mypy]
           uv pip install "ty==${{ matrix.ty-ver }}"
 
@@ -172,4 +178,3 @@ jobs:
         run: |
           source .venv/bin/activate
           ty check src
-
