--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,9 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: read
+      checks: write
     uses: ./.github/workflows/build_inc.yml
 
   all_tests:
