--- a/.github/workflows/inc_tc_mypy.yml
+++ b/.github/workflows/inc_tc_mypy.yml
@@ -64,14 +64,12 @@ jobs:
     - name: Run mypy on src
       run: |
         source .venv/bin/activate
-        mypy --output=json src/ > out.json || exitstatus=$?
-        python ci-annotation-converter/ci_annotation_converter.py mypy github-text -i out.json
-        exit ${exitstatus:-0}
+        mypy --output=json src/ > out.json || true
+        python ci-annotation-converter/ci_annotation_converter.py mypy github-text -i out.json -e
 
     - name: Run mypy on runtime tests
       run: |
         source .venv/bin/activate
-        mypy --output=json --config-file=tests/runtime/mypy.ini tests/runtime/ > out.json || exitstatus=$?
-        python ci-annotation-converter/ci_annotation_converter.py mypy github-text -i out.json
-        exit ${exitstatus:-0}
+        mypy --output=json --config-file=tests/runtime/mypy.ini tests/runtime/ > out.json || true
+        python ci-annotation-converter/ci_annotation_converter.py mypy github-text -i out.json -e
 
