--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,7 @@ cython_debug/
 /node_modules
 package.json
 package-lock.json
+
+# mypy is so keen at creating cache in project root folder
+/3.[0-9]
+/3.[0-9][0-9]
