--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -2,76 +2,48 @@ name: Type checker compatibility tests
 
 permissions:
   contents: read
+  checks: write
 
 on:
   - workflow_dispatch
 
 jobs:
-  mypy_compat:
+  mypy:
     strategy:
       fail-fast: false
       matrix:
-        myver:
+        mypy-ver:
           - '1.19.1'
           - '1.19.0'
           - '1.18.2'
           - '1.18.1'
-    runs-on: ubuntu-slim
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: astral-sh/setup-uv@v7
-        with:
-          version: '0.9.26'
-          cache-dependency-glob: |
-            ./pyproject.toml
-
-      - name: Install prerequisites
-        run: |
-          uv venv --python-preference only-system
-          uv pip install -r pyproject.toml
-          uv pip install 'mypy == ${{ matrix.myver }}'
-
-      - name: Perform type check
-        run: >
-          .venv/bin/mypy src
+    uses: ./.github/workflows/inc_tc_mypy.yml
+    with:
+      tarball-flavor: none
+      ver-spec: mypy == ${{ matrix.mypy-ver }}
 
 
-  pyright_compat:
+  pyright:
     strategy:
       fail-fast: false
       matrix:
-        prver:
+        pyright-ver:
           - '1.1.408'
           - '1.1.407'
           - '1.1.406'
-    runs-on: ubuntu-slim
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: astral-sh/setup-uv@v7
-        with:
-          version: '0.9.26'
-          cache-dependency-glob: |
-            ./pyproject.toml
-
-      - name: Install prerequisites
-        run: |
-          uv venv --python-preference only-system
-          uv pip install .[mypy]
-
-      - uses: jakebailey/pyright-action@v2
-        with:
-          version: ${{ matrix.prver }}
-          python-path: .venv/bin/python
-          extra-args: src
+    uses: ./.github/workflows/inc_tc_pyright.yml
+    with:
+      tarball-flavor: none
+      ver-spec: pyright == ${{ matrix.pyright-ver }}
 
 
   basedpyright_compat:
     strategy:
       fail-fast: false
       matrix:
-        bpr-ver:
+        basedpyright-ver:
+          - '1.37.3'
+          - '1.37.2'
           - '1.37.1'
           - '1.37.0'
           - '1.36.2'
@@ -84,72 +56,37 @@ jobs:
           - '1.32.0'
           - '1.31.7'
           - '1.31.6'
-
-    runs-on: 'ubuntu-slim'
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: astral-sh/setup-uv@v7
-        with:
-          version: '0.9.26'
-          cache-dependency-glob: |
-            ./pyproject.toml
-
-      - name: Install prerequisite python packages
-        run: |
-          uv venv --python-preference only-system
-          uv pip install .[mypy]
-          uv pip install "basedpyright==${{ matrix.bpr-ver }}"
-
-      - name: Run basedpyright
-        run: |
-          source .venv/bin/activate
-          basedpyright --level error src
+    uses: ./.github/workflows/inc_tc_basedpyright.yml
+    with:
+      tarball-flavor: none
+      ver-spec: basedpyright == ${{ matrix.basedpyright-ver }}
 
 
-  pyrefly_compat:
+  pyrefly:
     strategy:
       fail-fast: false
       matrix:
-        pyr-ver:
+        pyrefly-ver:
+          - '0.50.1'
+          - '0.50.0'
           - '0.49.0'
           - '0.48.2'
           - '0.48.1'
           - '0.48.0'
           - '0.47.0'
           - '0.46.3'
-          - '0.46.2'
-          - '0.46.1'
-          - '0.46.0'
-          - '0.45.2'
-
-    runs-on: 'ubuntu-slim'
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: astral-sh/setup-uv@v7
-        with:
-          version: '0.9.26'
-          cache-dependency-glob: |
-            ./pyproject.toml
-
-      - name: Install prerequisite python packages
-        run: |
-          uv venv --python-preference only-system
-          uv pip install .[mypy]
-          uv pip install "pyrefly==${{ matrix.pyr-ver }}"
-
-      - name: Run pyrefly
-        run: |
-          source .venv/bin/activate
-          pyrefly check src
+    uses: ./.github/workflows/inc_tc_pyrefly.yml
+    with:
+      tarball-flavor: none
+      ver-spec: pyrefly == ${{ matrix.pyrefly-ver }}
 
 
-  ty_compat:
+  ty:
     strategy:
       fail-fast: false
       matrix:
         ty-ver:
+          - '0.0.14'
           - '0.0.13'
           - '0.0.12'
           - '0.0.11'
@@ -157,24 +94,8 @@ jobs:
           - '0.0.9'
           - '0.0.8'
           - '0.0.7'
+    uses: ./.github/workflows/inc_tc_ty.yml
+    with:
+      tarball-flavor: none
+      ver-spec: ty == ${{ matrix.ty-ver }}
 
-    runs-on: 'ubuntu-slim'
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: astral-sh/setup-uv@v7
-        with:
-          version: '0.9.26'
-          cache-dependency-glob: |
-            ./pyproject.toml
-
-      - name: Install prerequisite python packages
-        run: |
-          uv venv --python-preference only-system
-          uv pip install .[mypy]
-          uv pip install "ty==${{ matrix.ty-ver }}"
-
-      - name: Run ty
-        run: |
-          source .venv/bin/activate
-          ty check src
